--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aos": "^2.3.4",
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
